[package]
name = "proxy-dll"
version = "0.2.1"
authors = ["RinLovesYou"]
edition = "2021"
description = "A dynamic Windows System DLL proxy"
repository = "https://github.com/RinLovesYou/dll-proxy-rs"
license = "GPL-2.0"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
proxy-sys = "0.2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "std", "libloaderapi"] }

[lib]
crate-type = ["cdylib", "rlib"]